# isPyPackage

./: README.md  pyproject.toml
src/isPyPackage/: ansi_colors.py  ini.py  isPyPackage.py  pTree.py
